# enum-from-discriminant-derive

./: Cargo.toml  README.md
src/: lib.rs
tests/: integration_tests.rs
