[package]
name = "enum-from-discriminant-derive"
description = "Macro to implement TryFrom<Integers> for enum discriminants"
repository = "https://github.com/MarimeGui/enum-from-discriminant-derive"
authors = ["MarimeGui <lepro.guillaume@gmail.com>"]
keywords = ["derive", "tryfrom"]
categories = ["rust-patterns"]
readme = "README.md"
version = "1.0.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.101", features = ["full", "parsing"] }
